@@ -24,7 +24,7 @@
  *  $Id$
  */
 
-function GetConfigList($order='var,asc', $section='')
+function GetConfigList($order='var,asc', $section='', $search='')
 {
 	global $DB;
 
@@ -42,15 +42,13 @@ function GetConfigList($order='var,asc', $section='')
 		break;
 	}
 
-	if($section)
-		$config = $DB->GetAll('SELECT id, section, var, value, description as usercomment, disabled 
-			FROM uiconfig WHERE section != \'userpanel\' AND section = ?'
-			.$sqlord, array($section));
-	else
-		$config = $DB->GetAll('SELECT id, section, var, value, description as usercomment, disabled 
-			FROM uiconfig WHERE section != \'userpanel\''.$sqlord);
+	$config = $DB->GetAll('SELECT id, section, var, value, description as usercomment, disabled 
+			FROM uiconfig WHERE section != \'userpanel\''
+			.($section ? ' AND section = '.$DB->Escape($section) : '')
+			.($search ? ' AND var ?LIKE? '.$DB->Escape('%'.$search.'%') : '')
+			.$sqlord);
 
-	if($config) foreach ($config as $idx => $item) 
+	if($config) foreach ($config as $idx => $item)
 	{
 		switch($item['section'])
 		{
@@ -541,15 +539,22 @@ else
 	$s = $_GET['s'];
 $SESSION->save('conls', $s);
 
+if(!isset($_GET['n']))
+    $SESSION->restore('conln', $n);
+else
+	$n = $_GET['n'];
+$SESSION->save('conln', $n);
+
 if ($SESSION->is_set('conlp') && !isset($_GET['page']))
 	$SESSION->restore('conlp', $_GET['page']);
 
-$configlist = GetConfigList($o, $s);
+$configlist = GetConfigList($o, $s, $n);
 
 $listdata['total'] = $configlist['total'];
 $listdata['order'] = $configlist['order'];
 $listdata['direction'] = $configlist['direction'];
 $listdata['section'] = $configlist['section'];
+$listdata['search'] = $n;
 
 unset($configlist['total']);
 unset($configlist['order']);
