@@ -30,7 +30,7 @@ window.open('?m=invoice&id={$invoice.invoice}&original={$invoice.original}&copy=
 		document.page.allbox.checked = !document.page.allbox.checked;
 		CheckAll();
 	}
-	
+
 	function pays()
 	{
 		if(! confirm('{/literal}{t}Are you sure, you want to check/uncheck selected invoices as accounted?{/t}{literal}'))
@@ -49,7 +49,7 @@ window.open('?m=invoice&id={$invoice.invoice}&original={$invoice.original}&copy=
 			add += "&copy=1";
 		if(document.page.duplicate.checked)
 			add += "&duplicate=1";
-														       
+
 		document.page.action="?m=invoice&print=cached" + add;
 		document.page.target="_blank";
 		document.page.submit();
