@@ -10,6 +10,7 @@ version ? (????-??-??)
   - BTS#0000863: changed temporary referenced $number variable to actual variable [chilan]
   - Fixed performance of nodes quick-searching on MySQL [alec]
   - Fix regression where wasn't possible to view information about deleted customer [alec]
+  - Added searching by option name in configuration options list [alec]
 
 version 1.11.12 Aris (2011-03-18)
 
